alterando algumas coisas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dra. Ana Silva - Advogada Especializada</title>
+    <title>Dr(a)... - Advogada Especializada</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">Dra. <span>Ana Silva</span></a>
+            <a href="#" class="logo">Dra. <span>...</span></a>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
             </button>
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Defesa Jurídica com Excelência e Compromisso</h1>
-                <p>Advogada especializada com mais de 15 anos de experiência, oferecendo soluções jurídicas personalizadas para proteger seus direitos e interesses.</p>
+                <p>Advogado especializada com mais de 15 anos de experiência, oferecendo soluções jurídicas personalizadas para proteger seus direitos e interesses.</p>
                 <div class="hero-btns">
                     <a href="#contact" class="btn btn-primary">Agende uma Consulta</a>
                     <a href="#areas" class="btn btn-secondary">Áreas de Atuação</a>
@@ -43,14 +43,14 @@
     <!-- Sobre -->
     <section class="about section-padding" id="about">
         <div class="container">
-            <h2 class="section-title">Sobre a Dra. Ana Silva</h2>
+            <h2 class="section-title">Sobre a Dr(a)...</h2>
             <div class="about-content">
                 <div class="about-img">
                     <img src="https://images.unsplash.com/photo-1590086783191-a0694c7d1e6e?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Dra. Ana Silva">
                 </div>
                 <div class="about-text">
-                    <h3>Advogada Especializada em Direito Civil e Empresarial</h3>
-                    <p>Formada pela Faculdade de Direito da Universidade de São Paulo (USP) com especialização em Direito Civil e Empresarial. Membro ativa da OAB/SP e com vasta experiência em casos complexos.</p>
+                    <h3>Advogado(a) Especializada em Direito Civil e Empresarial</h3>
+                    <p>Formado pela Faculdade de Direito da Universidade de São Paulo (USP) com especialização em Direito Civil e Empresarial. Membro ativa da OAB/SP e com vasta experiência em casos complexos.</p>
                     <p>Minha abordagem combina conhecimento jurídico aprofundado com uma compreensão clara das necessidades individuais de cada cliente, garantindo representação legal eficaz e personalizada.</p>
                     <div class="about-stats">
                         <div class="stat-item">
@@ -75,7 +75,7 @@
     <section class="practice-areas section-padding" id="areas">
         <div class="container">
             <h2 class="section-title">Áreas de Atuação</h2>
-            <p>Especializada em diversas áreas do direito para oferecer a melhor assessoria jurídica</p>
+            <p>Especializado em diversas áreas do direito para oferecer a melhor assessoria jurídica</p>
             <div class="areas-grid">
                 <div class="area-card">
                     <div class="area-icon">
@@ -131,7 +131,7 @@
             <div class="testimonials-slider">
                 <div class="testimonial active">
                     <div class="testimonial-text">
-                        A Dra. Ana foi fundamental na resolução do meu caso trabalhista. Profissionalismo e dedicação em todos os momentos, recomendo sem hesitar!
+                        O Dr(a)... foi fundamental na resolução do meu caso trabalhista. Profissionalismo e dedicação em todos os momentos, recomendo sem hesitar!
                     </div>
                     <div class="testimonial-author">
                         <div class="author-img">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-text">
-                        Excelente advogada! Me ajudou em um processo complexo de divórcio com muita sensibilidade e competência. Sempre disponível para tirar dúvidas.
+                        Excelente Advogado! Me ajudou em um processo complexo de divórcio com muita sensibilidade e competência. Sempre disponível para tirar dúvidas.
                     </div>
                     <div class="testimonial-author">
                         <div class="author-img">
@@ -159,7 +159,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-text">
-                        Contratei a Dra. Ana para assessorar minha empresa e foi a melhor decisão. Conhecimento profundo do direito empresarial e soluções criativas para nossos desafios.
+                        Contratei a Dr(a)... para assessorar minha empresa e foi a melhor decisão. Conhecimento profundo do direito empresarial e soluções criativas para nossos desafios.
                     </div>
                     <div class="testimonial-author">
                         <div class="author-img">
@@ -268,8 +268,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <h3>Dra. Ana Silva</h3>
-                    <p>Advogada especializada com mais de 15 anos de experiência, comprometida em oferecer a melhor assessoria jurídica para proteger seus direitos e interesses.</p>
+                    <h3>Dr(a)...</h3>
+                    <p>Advogado especializada com mais de 15 anos de experiência, comprometida em oferecer a melhor assessoria jurídica para proteger seus direitos e interesses.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 Dra. Ana Silva - Advogada. Todos os direitos reservados. OAB/SP 123.456</p>
+                <p>&copy; 2025 Dr(a) - Advogado. Todos os direitos reservados. OAB/SP 123.456</p>
             </div>
         </div>
     </footer>
